PLFM-7541: Replace old view filters with new unified filter